--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uptime Monitor - 24/7 Website Monitoring Service</title>
+    <title>SitePulse - 24/7 Website Monitoring Service</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -16,12 +16,11 @@
 </head>
 <body class="bg-gray-50 text-gray-800">
 
-    <!-- Header -->
     <header class="bg-white shadow-sm sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <div class="flex items-center">
-                <i class="fas fa-satellite-dish text-2xl text-gray-800"></i>
-                <span class="font-bold text-xl ml-2 text-gray-900">Uptime Monitor</span>
+                <i class="fas fa-heart-pulse text-2xl text-red-600"></i>
+                <span class="font-bold text-xl ml-2 text-gray-900">SitePulse</span>
             </div>
             <div>
                 <a href="/login.html" class="bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-5 rounded-lg transition duration-300">
@@ -31,7 +30,6 @@
         </nav>
     </header>
 
-    <!-- Hero Section -->
     <main>
         <section class="gradient-bg py-20 sm:py-32">
             <div class="container mx-auto px-6 text-center">
@@ -41,63 +39,56 @@
                 <p class="mt-4 text-lg md:text-xl text-gray-600 max-w-3xl mx-auto">
                     Never miss a beat. Get instant alerts when your website goes down and gain insights into its performance. Simple, powerful, and free.
                 </p>
-                <a href="/login.html" class="mt-8 inline-block bg-gray-800 hover:bg-gray-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300 shadow-lg">
+                <a href="/login.html" class="mt-8 inline-block bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300 shadow-lg">
                     Start Monitoring for Free
                 </a>
             </div>
         </section>
 
-        <!-- Features Section -->
         <section class="py-20 bg-white">
             <div class="container mx-auto px-6">
                 <div class="text-center mb-12">
-                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Why Choose Uptime Monitor?</h2>
+                    <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Why Choose SitePulse?</h2>
                     <p class="text-gray-600 mt-2">Everything you need to keep your online presence secure.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-                    <!-- Feature 1 -->
                     <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
-                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-red-100 text-red-600 mb-4">
                             <i class="fas fa-tachometer-alt text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Constant Monitoring</h3>
                         <p class="text-gray-600">We check your website every 5 minutes from multiple locations to ensure it's always online and accessible to your users.</p>
                     </div>
-                    <!-- Feature 2 -->
                     <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
-                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-red-100 text-red-600 mb-4">
                             <i class="fas fa-bell text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Instant Alerts</h3>
                         <p class="text-gray-600">Receive immediate email notifications the moment your site goes down, so you can take action before it affects your business.</p>
                     </div>
-                    <!-- Feature 3 -->
                     <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
-                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-red-100 text-red-600 mb-4">
                             <i class="fas fa-search-plus text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Keyword Verification</h3>
                         <p class="text-gray-600">Go beyond simple pings. We can check for a specific keyword on your page to ensure your content is loading correctly.</p>
                     </div>
-                     <!-- Feature 4 -->
-                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
-                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                     <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-red-100 text-red-600 mb-4">
                             <i class="fas fa-chart-line text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Performance Insights</h3>
                         <p class="text-gray-600">Track your site's response time and review historical uptime data with beautiful charts to understand its performance over time.</p>
                     </div>
-                     <!-- Feature 5 -->
-                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
-                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                     <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-red-100 text-red-600 mb-4">
                             <i class="fas fa-mobile-alt text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Mobile-First Design</h3>
                         <p class="text-gray-600">Access your dashboard and manage your monitors from any device, anywhere, with our fully responsive interface.</p>
                     </div>
-                     <!-- Feature 6 -->
-                    <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
-                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-gray-200 text-gray-700 mb-4">
+                     <div class="feature-card bg-gray-50 p-8 rounded-lg border border-gray-200">
+                        <div class="flex items-center justify-center h-12 w-12 rounded-full bg-red-100 text-red-600 mb-4">
                             <i class="fas fa-lock text-2xl"></i>
                         </div>
                         <h3 class="text-xl font-bold mb-2">Secure & Private</h3>
@@ -108,10 +99,9 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-white">
         <div class="container mx-auto px-6 py-8 text-center">
-            <p>&copy; 2025 Uptime Monitor. All rights reserved.</p>
+            <p>&copy; 2025 SitePulse. All rights reserved.</p>
             <p class="text-sm text-gray-400 mt-2">A reliable service to keep you online.</p>
         </div>
     </footer>
