--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Monitoring Dashboard</title>
+    <title>Your SitePulse Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@2.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
@@ -38,12 +38,12 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between h-16">
                 <div class="flex items-center">
-                    <i class="fas fa-satellite-dish text-2xl text-gray-800"></i>
-                    <span class="font-bold text-xl ml-3 text-gray-900">Uptime Monitor</span>
+                    <i class="fas fa-heart-pulse text-2xl text-red-600"></i>
+                    <span class="font-bold text-xl ml-3 text-gray-900">SitePulse</span>
                 </div>
                 <div class="flex items-center">
                     <span id="user-email" class="hidden sm:block text-sm text-gray-600 mr-4"></span>
-                    <button id="logout-button" class="text-sm text-gray-700 hover:text-gray-900 font-medium">
+                    <button id="logout-button" class="text-sm text-gray-700 hover:text-red-600 font-medium">
                         <i class="fas fa-sign-out-alt mr-1"></i>Logout
                     </button>
                 </div>
@@ -57,14 +57,14 @@
              <form id="add-monitor-form" class="grid grid-cols-1 md:grid-cols-4 gap-4 items-end">
                 <div class="md:col-span-2">
                     <label for="website-url" class="block text-sm font-medium text-gray-700">Website URL</label>
-                    <input type="url" id="website-url" placeholder="https://your-website.com" required class="mt-1 block w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-500 focus:border-transparent transition">
+                    <input type="url" id="website-url" placeholder="https://your-website.com" required class="mt-1 block w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition">
                 </div>
                 <div>
                     <label for="keyword" class="block text-sm font-medium text-gray-700">Keyword (Optional)</label>
-                    <input type="text" id="keyword" placeholder="e.g. 'Welcome'" class="mt-1 block w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-gray-500 focus:border-transparent transition">
+                    <input type="text" id="keyword" placeholder="e.g. 'Welcome'" class="mt-1 block w-full px-4 py-2 bg-gray-50 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-red-500 focus:border-transparent transition">
                 </div>
                 <div class="text-right">
-                    <button type="submit" class="w-full bg-gray-800 hover:bg-gray-700 text-white font-bold py-2 px-4 rounded-lg h-10 transition duration-300 flex items-center justify-center">
+                    <button type="submit" class="w-full bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg h-10 transition duration-300 flex items-center justify-center">
                         <i class="fas fa-plus mr-2"></i>Add
                     </button>
                 </div>
@@ -237,7 +237,7 @@
             return `
                 <div class="bg-white shadow-md rounded-xl p-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 transition hover:shadow-lg">
                     <div class="flex-grow">
-                        <p class="font-semibold text-lg text-gray-800 break-all">${monitor.url}</p>
+                        <a href="${monitor.url}" target="_blank" rel="noopener noreferrer" class="font-semibold text-lg text-gray-800 break-all hover:underline">${monitor.url}</a>
                         ${keywordText}
                         <p class="text-sm text-gray-500 mt-1">Last check: ${lastChecked}</p>
                     </div>
@@ -247,6 +247,7 @@
                             <p class="text-xs ${sslClass}"><i class="fas fa-shield-alt mr-2"></i>SSL: ${sslText}</p>
                         </div>
                         <div class="flex items-center gap-2">
+                           <a href="${monitor.url}" target="_blank" rel="noopener noreferrer" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-3 rounded-lg text-sm transition">Go to Site</a>
                            <button data-id="${id}" data-url="${monitor.url}" class="view-history-button bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-2 px-3 rounded-lg text-sm transition">History</button>
                            <button data-id="${id}" data-url="${monitor.url}" class="delete-monitor-button text-red-500 hover:text-red-700 font-bold py-2 px-3 rounded-lg text-sm transition"><i class="fas fa-trash-alt"></i></button>
                         </div>
@@ -318,8 +319,8 @@
                     datasets: [{
                         label: 'Response Time (ms)',
                         data: data,
-                        borderColor: 'rgb(59, 130, 246)',
-                        backgroundColor: 'rgba(59, 130, 246, 0.5)',
+                        borderColor: 'rgb(220, 38, 38)',
+                        backgroundColor: 'rgba(220, 38, 38, 0.5)',
                         tension: 0.1,
                         pointBackgroundColor: data.map(d => d.status === 'UP' ? 'rgb(22, 163, 74)' : 'rgb(220, 38, 38)'),
                         pointRadius: 5,
