--- a/login.html
+++ b/login.html
@@ -10,13 +10,12 @@
     <style>
         body { 
             font-family: 'Inter', sans-serif; 
-            background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
         }
         .form-container { display: block; }
         .hidden-form { display: none; }
     </style>
 </head>
-<body class="min-h-screen flex flex-col items-center justify-center p-4">
+<body class="bg-gray-50 min-h-screen flex flex-col items-center justify-center p-4">
 
     <div class="w-full max-w-sm mx-auto">
         <header class="text-center mb-8">
