--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <a href="https://github.com/oancholarevelo" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition">
                         <i class="fab fa-github text-2xl"></i>
                     </a>
-                    <a href="https://www.linkedin.com/in/oliver-revelo/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition">
+                    <a href="https://www.linkedin.com/in/oliverrevelo/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition">
                         <i class="fab fa-linkedin text-2xl"></i>
                     </a>
                     <a href="https://oliverrevelo.vercel.app/" target="_blank" rel="noopener noreferrer" class="text-gray-400 hover:text-white transition">
