--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale-1.0">
     <title>Your SitePulse Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
@@ -11,12 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <style>
         body { font-family: 'Inter', sans-serif; }
-        .status-up { color: #16a34a; }
-        .status-down { color: #dc2626; }
-        .status-pending { color: #f59e0b; }
-        .ssl-ok { color: #16a34a; }
-        .ssl-warning { color: #f59e0b; }
-        .ssl-error { color: #dc2626; }
         .modal {
             display: none; position: fixed; z-index: 100; left: 0; top: 0;
             width: 100%; height: 100%;
@@ -30,6 +24,23 @@
             border-radius: 0.75rem;
             box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04);
         }
+        /* Added for badge styling */
+        .status-badge {
+            display: inline-flex;
+            align-items: center;
+            padding: 0.25em 0.75em;
+            border-radius: 9999px;
+            font-size: 0.8rem;
+            font-weight: 600;
+            line-height: 1.2;
+        }
+        .status-up { background-color: #ecfdf5; color: #065f46; }
+        .status-down { background-color: #fef2f2; color: #991b1b; }
+        .status-pending { background-color: #fffbeb; color: #92400e; }
+        
+        .ssl-ok { background-color: #ecfdf5; color: #065f46; }
+        .ssl-warning { background-color: #fffbeb; color: #92400e; }
+        .ssl-error { background-color: #fef2f2; color: #991b1b; }
     </style>
 </head>
 <body class="bg-gray-50 flex flex-col min-h-screen">
@@ -155,7 +166,6 @@
         const logoutButton = document.getElementById('logout-button');
         const addMonitorForm = document.getElementById('add-monitor-form');
         const formMessageArea = document.getElementById('form-message-area');
-
         const historyModal = document.getElementById('history-modal');
         const modalMonitorUrl = document.getElementById('modal-monitor-url');
         const historyContent = document.getElementById('history-content');
@@ -189,7 +199,6 @@
             const url = addMonitorForm['website-url'].value.trim();
             const keyword = addMonitorForm['keyword'].value.trim();
             if (!currentUser || !url) return;
-
             try {
                 await addDoc(collection(db, "monitors"), {
                     url: url,
@@ -214,7 +223,6 @@
             loadingState.style.display = 'block';
             emptyState.style.display = 'none';
             monitorsListContainer.innerHTML = '';
-
             const q = query(collection(db, "monitors"), where("userId", "==", userId), orderBy("createdAt", "desc"));
             unsubscribe = onSnapshot(q, (snapshot) => {
                 loadingState.style.display = 'none';
@@ -231,47 +239,54 @@
             });
         }
 
+        // --- ENHANCED createMonitorCard FUNCTION ---
         function createMonitorCard(id, monitor) {
             let statusClass = 'status-pending', statusIcon = 'fa-clock', statusText = monitor.status || 'Pending';
             if (statusText === 'UP') { statusClass = 'status-up'; statusIcon = 'fa-check-circle'; } 
             else if (statusText === 'DOWN') { statusClass = 'status-down'; statusIcon = 'fa-times-circle'; }
 
             const lastChecked = monitor.lastChecked?.toDate ? monitor.lastChecked.toDate().toLocaleString() : 'Never';
-            const responseTime = monitor.lastResponseTime ? `${monitor.lastResponseTime} ms` : 'N/A';
-            const keywordText = monitor.keyword ? `<p class="text-xs text-gray-500 italic mt-1">Keyword: "${monitor.keyword}"</p>` : '';
+            const keywordText = monitor.keyword ? `<div class="mt-1"><span class="text-xs inline-block bg-gray-200 text-gray-700 px-2 py-1 rounded-full">Keyword: "${monitor.keyword}"</span></div>` : '';
 
-            let sslText = 'N/A';
-            let sslClass = 'text-gray-400';
-            // FIX: Check if the value is a number to prevent "undefined" from showing.
+            let sslText = 'SSL: N/A';
+            let sslClass = 'status-pending'; // Default greyish badge
             if (typeof monitor.sslDaysRemaining === 'number') {
                 if (monitor.sslDaysRemaining < 0) {
-                    sslText = 'Expired';
+                    sslText = 'SSL: Expired';
                     sslClass = 'ssl-error';
                 } else if (monitor.sslDaysRemaining < 30) {
-                    sslText = `Expires in ${monitor.sslDaysRemaining} days`;
+                    sslText = `SSL: Expires in ${monitor.sslDaysRemaining} days`;
                     sslClass = 'ssl-warning';
                 } else {
-                    sslText = `Expires in ${monitor.sslDaysRemaining} days`;
+                    sslText = `SSL: OK (${monitor.sslDaysRemaining} days)`;
                     sslClass = 'ssl-ok';
                 }
             }
 
             return `
-                <div class="bg-white shadow-md rounded-xl p-4 flex flex-col sm:flex-row items-start sm:items-center justify-between gap-4 transition hover:shadow-lg">
+                <div class="bg-white shadow-md rounded-xl p-5 flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 transition hover:shadow-lg">
                     <div class="flex-grow">
-                        <a href="${monitor.url}" target="_blank" rel="noopener noreferrer" class="font-semibold text-lg text-gray-800 break-all hover:underline">${monitor.url}</a>
+                        <div class="flex items-center gap-3">
+                            <i class="fas ${statusIcon} ${statusClass.replace('status-', 'text-')} text-2xl"></i>
+                            <div>
+                                <a href="${monitor.url}" target="_blank" rel="noopener noreferrer" class="font-semibold text-lg text-gray-900 break-all hover:underline">${monitor.url}</a>
+                                <p class="text-sm text-gray-500 mt-1">
+                                    <i class="far fa-clock mr-1"></i>Last check: ${lastChecked}
+                                </p>
+                            </div>
+                        </div>
                         ${keywordText}
-                        <p class="text-sm text-gray-500 mt-1">Last check: ${lastChecked}</p>
                     </div>
-                    <div class="flex items-center gap-4 w-full sm:w-auto">
-                         <div class="text-left sm:text-right space-y-1">
-                            <p class="font-medium text-md ${statusClass}"><i class="fas ${statusIcon} mr-2"></i>${statusText}</p>
-                            <p class="text-xs ${sslClass}"><i class="fas fa-shield-alt mr-2"></i>SSL: ${sslText}</p>
+
+                    <div class="flex-shrink-0 flex flex-row sm:flex-col lg:flex-row items-center gap-4 w-full sm:w-auto mt-4 sm:mt-0">
+                        <div class="flex gap-2 w-full sm:w-auto sm:justify-end">
+                            <span class="status-badge ${statusClass}">${statusText}</span>
+                            <span class="status-badge ${sslClass}">${sslText}</span>
                         </div>
                         <div class="flex items-center gap-2">
-                           <a href="${monitor.url}" target="_blank" rel="noopener noreferrer" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-3 rounded-lg text-sm transition">Go to Site</a>
-                           <button data-id="${id}" data-url="${monitor.url}" class="view-history-button bg-gray-200 hover:bg-gray-300 text-gray-700 font-bold py-2 px-3 rounded-lg text-sm transition">History</button>
-                           <button data-id="${id}" data-url="${monitor.url}" class="delete-monitor-button text-red-500 hover:text-red-700 font-bold py-2 px-3 rounded-lg text-sm transition"><i class="fas fa-trash-alt"></i></button>
+                           <button data-id="${id}" data-url="${monitor.url}" class="view-history-button bg-gray-100 hover:bg-gray-200 text-gray-800 font-semibold py-2 px-4 rounded-lg text-sm transition">History</button>
+                           <a href="${monitor.url}" target="_blank" rel="noopener noreferrer" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-lg text-sm transition">Visit</a>
+                           <button data-id="${id}" data-url="${monitor.url}" class="delete-monitor-button text-gray-400 hover:text-red-600 w-9 h-9 flex items-center justify-center rounded-lg transition"><i class="fas fa-trash-alt"></i></button>
                         </div>
                     </div>
                 </div>
